<resources>
    <string name="app_name">IntentsAndSQLite</string>
    <string name="login">Log in</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="dateofbirth">Date of birth</string>
    <string name="role">Role</string>
    <string name="semester">Semester</string>
</resources>
